--- a/source/win32/language/language.rc
+++ b/source/win32/language/language.rc
@@ -317,7 +317,7 @@ IDR_MENU MENU
         MENUITEM "&Help...", IDM_HELP_HELP
         MENUITEM "&License...", IDM_HELP_LICENSE
         MENUITEM SEPARATOR
-        MENUITEM "&About...", IDM_HELP_ABOUT
+        MENUITEM "&About svn170104...", IDM_HELP_ABOUT
     }
 }
 
@@ -372,7 +372,7 @@ CAPTION "About Nestopia"
 FONT 8, "MS Shell Dlg", 400, 0, 1
 {
     GROUPBOX        "", IDC_STATIC, 7, 7, 147, 141
-    LTEXT           "Nestopia UE SVN 161227", IDC_ABOUT_NAMEVERSION, 44, 14, 100, 8, SS_LEFT
+    LTEXT           "Nestopia UE SVN", IDC_ABOUT_NAMEVERSION, 52, 14, 100, 8, SS_LEFT
     ICON            "", IDC_ABOUT_ICON, 70, 36, 21, 20, SS_ICON
     CTEXT           "Copyright © 2003-2008 Martin Freij\nCopyright © 2012-2016 R. Danbrook", IDC_STATIC, 15, 69, 122, 16, SS_CENTER
     LTEXT           "Homepage", IDC_STATIC, 13, 124, 8, 1, SS_LEFT
